tests/specs/ecosystem/klexik/fastify_oas_connector/1_1_5.test
klexik/fastify-oas-connector/1.1.5
-- deno.lock --

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: Module not found "file://<tmpdir>/src/fastify".
    at file://<tmpdir>/src/types.ts:1:96

